--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "author": "Mael T.",
   "license": "MIT",
   "scripts": {
-    "start": "node app.js"
+    "start": "node express.js"
   },
   "dependencies": {
-    "node-rtsp-stream": "^0.0.9"
+    "express": "^4.19.2",
+    "ffmpeg-static": "^5.2.0",
+    "node-onvif": "^0.1.7",
+    "rtsp-relay": "^1.9.0"
   },
   "devDependencies": {
     "eslint": "^8.27.0"
