--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "start": "node express.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "ffmpeg-static": "^5.2.0",
+    "express": "^4.21.0",
+    "express-ws": "^5.0.2",
+    "fluent-ffmpeg": "^2.1.3",
     "node-onvif": "^0.1.7",
-    "rtsp-relay": "^1.9.0"
+    "node-rtsp-stream": "^0.0.9",
+    "rtsp-relay": "^1.9.0",
+    "rtsp2web": "^3.1.7",
+    "websocket-stream": "^5.5.2"
   },
   "devDependencies": {
     "eslint": "^8.27.0"
